[package]
name = "msdfgen"
version = "0.2.0"
description = "Safe bindings for msdfgen (multi-channel signed distance field generator)"
categories = ["external-ffi-bindings", "graphics"]
keywords = ["distance-fields", "multi-channel", "SDF", "MSDF", "MCSDF"]
authors = ["K. <kayo@illumium.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/katyo/msdfgen-rs"
edition = "2021"

[workspace]
members = ["sys"]

[badges.is-it-maintained-issue-resolution]
repository = "katyo/msdfgen-rs"

[badges.is-it-maintained-open-issues]
repository = "katyo/msdfgen-rs"

[badges.maintenance]
status = "passively-maintained"

[dependencies.msdfgen-sys]
version = "0.2.0"
path = "sys"

[dependencies.ttf-parser]
version = "0.18"
optional = true

[dependencies.typeface]
version = "0.2"
optional = true

[dependencies.font-rs]
package = "font"
version = "0.10"
optional = true

[dependencies.freetype-rs]
version = "0.32"
optional = true

[dependencies.png]
version = "0.17"
optional = true

[dev-dependencies.all_asserts]
version = "2"

[dev-dependencies.ttf-parser]
version = "0.18"

[dev-dependencies.notosans]
version = "0.1"

[dev-dependencies.material-icons]
version = "0.2"

[features]
default = ["ttf-parser", "freetype-rs", "png"]
font = ["font-rs", "typeface"]
all = ["default", "font"]
rustdoc = ["msdfgen-sys/rustdoc", "all"]

# generate bindings when build
bindgen = ["msdfgen-sys/bindgen"]

# build and link shared library
#shared = ["msdfgen-sys/shared"]

# build and link static library
#static = ["msdfgen-sys/static"]

# link libc++ instead of libstdc++
#libcxx = ["msdfgen-sys/libcxx"]

# link static libstdc++/libc++
#stdcxx-static = ["msdfgen-sys/stdcxx-static"]

[package.metadata.docs.rs]
features = ["rustdoc"]
