[package]
name = "msdfgen-lib"
version = "0.2.0"
description = "Bundled msdfgen library (multi-channel signed distance field generator)"
categories = ["external-ffi-bindings", "graphics"]
keywords = ["distance-fields", "multi-channel", "SDF", "MSDF", "MCSDF"]
authors = ["K. <kayo@illumium.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/katyo/msdfgen-rs"
edition = "2018"

[badges.travis-ci]
repository = "katyo/msdfgen-rs"

[badges.is-it-maintained-issue-resolution]
repository = "katyo/msdfgen-rs"

[badges.is-it-maintained-open-issues]
repository = "katyo/msdfgen-rs"

[badges.maintenance]
status = "passively-maintained"

[build-dependencies.fetch_unroll]
version = "0.3"

[build-dependencies.cc]
version = "1"
features = ["parallel"]

[features]
# build and link shared library instead of static
shared = []

# link libc++ instead of libstdc++
libcxx = []

# link static libstdc++/libc++
stdcxx-static = []

rustdoc = []

[package.metadata.docs.rs]
features = ["rustdoc"]
