[package]
name = "msdfgen-sys"
version = "0.1.0"
description = "Unsafe bindings for msdfgen (multi-channel signed distance field generator)"
categories = ["external-ffi-bindings", "graphics"]
keywords = ["distance-fields", "multi-channel", "SDF", "MSDF", "MCSDF"]
authors = ["K. <kayo@illumium.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/katyo/msdfgen-rs"
edition = "2018"

[badges.travis-ci]
repository = "katyo/msdfgen-rs"

[badges.is-it-maintained-issue-resolution]
repository = "katyo/msdfgen-rs"

[badges.is-it-maintained-open-issues]
repository = "katyo/msdfgen-rs"

[badges.maintenance]
status = "passively-maintained"

[build-dependencies.fetch_unroll]
version = "0.3"
optional = true

[build-dependencies.bindgen]
version = "0.60"
optional = true

[features]
generate-bindings = ["fetch_unroll", "bindgen"]
rustdoc = []

[package.metadata.docs.rs]
features = ["rustdoc"]
