[package]
name = "msdfgen"
version = "0.1.0"
description = "Safe bindings for msdfgen (multi-channel signed distance field generator)"
categories = ["external-ffi-bindings", "graphics"]
keywords = ["distance-fields", "multi-channel", "SDF", "MSDF", "MCSDF"]
authors = ["K. <kayo@illumium.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/katyo/msdfgen-rs"
edition = "2018"

[badges.travis-ci]
repository = "katyo/msdfgen-rs"

[badges.is-it-maintained-issue-resolution]
repository = "katyo/msdfgen-rs"

[badges.is-it-maintained-open-issues]
repository = "katyo/msdfgen-rs"

[badges.maintenance]
status = "passively-maintained"

[dependencies.msdfgen-sys]
version = "0.1.0"
path = "../msdfgen-sys"

[dependencies.ttf-parser]
version = "^0.4"
optional = true

[dependencies.font]
version = "^0.3"
optional = true

[dependencies.fonterator]
version = "^0.6"
optional = true

[dependencies.freetype-rs]
version = "^0.26"
optional = true

[dependencies.png]
version = "^0.15"
optional = true

[dev-dependencies.msdfgen-lib]
version = "0.1.0"
path = "../msdfgen-lib"

[dev-dependencies.all_asserts]
version = "^1"

[dev-dependencies.ttf-parser]
version = "^0.4"

[dev-dependencies.notosans]
version = "^0.1"

[dev-dependencies.material-icons]
version = "^0.1"

[features]
all = ["ttf-parser", "font", "freetype-rs", "png"]
rustdoc = ["msdfgen-sys/rustdoc", "all"]
default = ["all"]

[package.metadata.docs.rs]
features = ["rustdoc"]
